<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".SplashScreen">
    <RelativeLayout
            android:padding="16dp"
            android:visibility="gone"
            android:id="@+id/splash_relative_loading"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/splash_string_loading_data"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:textStyle="bold|italic"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"/>
        <ProgressBar
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
    </RelativeLayout>
    <LinearLayout
            android:id="@+id/splash_linear_final"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:paddingLeft="16dp"
                android:text="@string/splash_string_welcome"
                android:layout_width="match_parent"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"/>

        <TextView
                android:paddingLeft="16dp"
                android:text="@string/aplash_string_select_league"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"/>
        <android.support.v7.widget.RecyclerView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/splash_recycler"
                android:background="@drawable/recycler_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>